--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
+title: "Ajoy Karmakar"
+description: "Academic Profile"
+baseurl: "" # for user.github.io type site
+url: "https://ajoyk11.github.io"
+theme: null
+markdown: kramdown
+
+# Plugins (optional, you can comment/remove if GitHub complains)
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+# Exclude
+exclude: ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/"]
 
